# nfc_ring_project

./: Cargo.toml  nfc_db.sqlite
src/: main.rs
