[package]
name = "secure-medical-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
